# Django-ORM-standalone

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py
datacenter/: active_passcards_view.py  models.py  passcard_info_view.py  storage_information_view.py
datacenter/templates/: active_passcards.html  passcard_info.html  storage_information.html
project/: __init__.py  settings.py  urls.py
